Creation of election
